--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ fjs.parentNode.insertBefore(js, fjs);
 
 <!-- Your share button code -->
 <div class="fb-share-button" 
-data-href="http://127.0.0.1:5500/img/certificado.jpg" 
+data-href="img/certificado.jpg" 
 data-layout="button_count">
 </div>
 
