--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <form action="/certificado.html">
+        <form action="/pages/certificado.html">
             <label for="fname">Seu nome:</label><br>
             <input type="text" id="fname" name="fname" value=""><br>
             <label for="lname">Nome do Destino:</label><br>
