--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     <div class="container">
         <h1>Seu certificado foi gerado!</h1>
         <div class="certificado">
-            <img src="../img/certificado.jpg" alt="">
+            <img src="img/certificado.jpg" alt="">
         </div>
 
 
@@ -32,7 +32,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
             }(document, 'script', 'facebook-jssdk'));</script>
 
         <!-- Your share button code -->
-        <div class="fb-share-button" data-href="../img/certificado.jpg" data-layout="button_count">
+        <div class="fb-share-button" data-href="img/certificado.jpg" data-layout="button_count">
         </div>
     </div>
 </body>
