--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Certificado" />
     <meta property="og:description" content="Your description" />
-    <meta property="og:image" content="https://rafaelhattge.github.io/facebook-share-v1/img/certificado.jpg" />
+    <meta property="og:image" content="https://rafaelhattge.github.io/facebook-share-v1/img/certificado2.jpg" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -17,7 +17,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     <div class="container">
         <h1>Seu certificado foi gerado!</h1>
         <div class="certificado">
-            <img src="img/certificado.jpg" alt="">
+            <img src="img/certificado2.jpg" alt="">
         </div>
 
 
@@ -32,7 +32,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
             }(document, 'script', 'facebook-jssdk'));</script>
 
         <!-- Your share button code -->
-        <div class="fb-share-button" data-href="https://rafaelhattge.github.io/facebook-share-v1/img/certificado.jpg" data-layout="button_count">
+        <div class="fb-share-button" data-href="https://rafaelhattge.github.io/facebook-share-v1/img/certificado2.jpg" data-layout="button_count">
         </div>
     </div>
 </body>
