--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Certificado</title>
     <!-- You can use Open Graph tags to customize link previews.
 Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url" content="https://www.your-domain.com/your-page.html" />
+    <meta property="og:url" content="https://rafaelhattge.github.io/facebook-share-v1/img/certificado.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Certificado" />
     <meta property="og:description" content="Your description" />
