--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Certificado</title>
-    <!-- You can use Open Graph tags to customize link previews.
-Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="https://rafaelhattge.github.io/facebook-share-v1/img/certificado.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Certificado" />
     <meta property="og:description" content="Your description" />
     <meta property="og:image" content="https://rafaelhattge.github.io/facebook-share-v1/img/certificado2.jpg" />
+    <title>Certificado</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -32,7 +33,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
             }(document, 'script', 'facebook-jssdk'));</script>
 
         <!-- Your share button code -->
-        <div class="fb-share-button" data-href="https://rafaelhattge.github.io/facebook-share-v1/img/certificado2.jpg" data-layout="button_count">
+        <div class="fb-share-button" data-href="https://rafaelhattge.github.io/facebook-share-v1/img/certificado2.jpg"
+            data-layout="button_count">
         </div>
     </div>
 </body>
